# spectest

./: LICENSE  README.md  example-spec.txt  pyproject.toml
src/spec_checker/: __init__.py  __main__.py  cli.py  dataset.py  judge.py  output.py  stats.py
